# hafo

./: .gitignore  .prettierignore  .prettierrc.js  CONTRIBUTING.md  README.md  hacs.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.cursor/commands/: coverage.md  lint.md  update-docs.md  update-version.md
.cursor/rules/docs/: RULE.md
.cursor/rules/meta/: RULE.md
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/instructions/: documentation.instructions.md  integration.instructions.md  meta.instructions.md  python.instructions.md  tests.instructions.md
.github/prompts/: coverage.prompt.md  lint.prompt.md  update-docs.prompt.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  docs.yml  release.yml
config/: .gitignore
custom_components/hafo/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  py.typed  sensor.py
custom_components/hafo/forecasters/: __init__.py  historical_shift.py  river_ml.py
custom_components/hafo/forecasters/common/: __init__.py  statistics.py  types.py
custom_components/hafo/translations/: en.json
docs/: index.md
docs/assets/branding/: make_branding_pngs.py
docs/developer-guide/: architecture.md  contributing.md  index.md  setup.md  testing.md
docs/stylesheets/: extra.css
docs/user-guide/: configuration.md  index.md  installation.md  removal.md  troubleshooting.md
docs/user-guide/forecasters/: historical-shift.md  index.md
tests/: __init__.py  conftest.py  test_config_flow.py  test_init.py  test_sensor.py
tests/forecasters/: __init__.py  test_historical_shift.py  test_river_ml.py
tests/scenarios/: README.md  __init__.py  conftest.py  test_scenarios.py
