[project]
name = "hafo"
version = "0.1.0"
description = "Home Assistant Forecaster - Entity forecasting for Home Assistant"
readme = "README.md"
requires-python = ">=3.13.2,<3.14"

dependencies = ["homeassistant>=2025.12.2"]

[dependency-groups]
dev = [
    "freezegun>=1.5.2",
    "matplotlib>=3.10.8",
    "mdformat-beautysh>=1.0.0",
    "mdformat-config>=0.2.1",
    "mdformat-footnote>=0.1.1",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-mkdocs>=4.4.2",
    "mdformat-myst>=0.2.2",
    "mdformat-pyproject>=0.0.2",
    "mdformat-ruff>=0.1.3",
    "mdformat-simple-breaks>=0.0.1",
    "mdformat-tables>=1.0.0",
    "mdformat>=0.7.22",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-material>=9.5.47",
    "mkdocs>=1.6.1",
    "pyright>=1.1.407",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-homeassistant-custom-component>=0.13.300",
    "ruff>=0.14.10",
    "setuptools>=80.9.0",
    "syrupy>=5.0.0",
]

[tool.ruff]
required-version = ">=0.14.0"
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Enable ALL rules and selectively ignore overly strict ones
select = ["ALL"]

# Ignore overly strict or unwanted rules
ignore = [
    'COM812',  # Formatter already deals with trailing commas
    'D202',    # Blank lines after docstring are fine
    'D203',    # Don't put a newline between the class and docstring (D211 is used instead)
    'D213',    # Multiline doc strings have an empty first line (Incompatible with D212)
    'PLR0913', # Parameter limits are a something for code review not linting
    'PLR0915', # Too many statements is something for code review not linting
    'PLR0912', # Too many branches is something for code review not linting
    'C901',    # Complexity is not a good linting rule, it should be a code review issue
    'TC001',   # Don't use TYPE_CHECKING blocks
    'TC002',   # Don't use TYPE_CHECKING blocks
    'TC003',   # Don't use TYPE_CHECKING blocks
    'BLE001',  # Do not catch blind exception - integration code needs to handle various exception types gracefully
    'ANN401',  # Dynamically typed expressions - legitimate use of Any for **kwargs parameters
    'TRY300',  # Consider moving statement to else block - overly pedantic about code structure
    'TRY301',  # Abstract raise to inner function - overly pedantic, creates unnecessary indirection
    'PLR0911', # Too many return statements - something for code review not linting
]

[tool.ruff.lint.isort]
known-first-party = ["hafo"]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]

"tests/**/*.py" = [
    'S101',    # Assert is allowed in tests
    'B011',    # Assert false is allowed in tests
    'PT015',   # Assert that always fails is fine in a test
    'SLF001',  # Accessing private methods is ok in testing
    'ARG001',  # Unused function argument - test fixtures often provide unused parameters for setup
    'PLR2004', # Magic value used in comparison - test assertions often use simple numeric values
    'S110',    # Try-except-pass detected - test exception handling patterns differ from production code
    'SIM105',  # Use contextlib.suppress instead of try-except-pass - test exception handling patterns differ
    'BLE001',  # Do not catch blind exception - test code needs to handle various exception types
]


[tool.pyright]
# Type checking configuration with maximum strictness
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["tests", "custom_components"]
extraPaths = ["."]

# Disable errors that propagate from third-party incomplete types
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownParameterType = false

# Disable missing stubs warning
reportMissingTypeStubs = false

# Home Assistant has complex multiple inheritance patterns that cause
# false positives for variable override warnings
reportIncompatibleVariableOverride = false

# Test-specific overrides - allow patterns common in testing
[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = "none"  # Tests intentionally access private methods for testing

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-statements = 60

[tool.pytest.ini_options]
timeout = 5
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--strict-config", "--disable-warnings"]

[tool.coverage.run]
omit = [
    "tests/*", # Exclude everything in tests/
]

[tool.mdformat]
number = true                 # Renumber ordered lists
end_of_line = "lf"
exclude = [".venv", "node_modules"]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
